# straitjacket

./: Cargo.toml
doc/: 3scale_AM_API.xopp
src/: lib.rs
src/access_token/: mod.rs
src/api/v0/: account.rs  api_doc.rs  application.rs  application_plan.rs  authentication_provider.rs  limit.rs  mod.rs  service.rs
src/api/v0/account/: application.rs  feature.rs  plan.rs  user.rs
src/api/v0/proxy/: mapping_rules.rs  mod.rs
src/api/v0/service/: method.rs  metric.rs  plan.rs
src/api/v0/service/proxy/: configs.rs  mapping_rules.rs  mod.rs
src/client/: mod.rs
src/proxy/: mapping_rules.rs
src/resources/: http.rs  metadata.rs  mod.rs
src/resources/http/: endpoint.rs  path_builder.rs
src/service/: method.rs  mod.rs  service.rs
