[package]
name = "straitjacket"
version = "0.1.0"
authors = ["Alejandro Martinez Ruiz <alex@flawedcode.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
client = ["reqwest"]

[dependencies]
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
straitjacket_macro = { git = "https://github.com/3scale-rs/straitjacket_macro", branch = "master" }
reqwest = { version = "*", optional = true, features = ["blocking", "json"] }
url = { git = "https://github.com/3scale-rs/rust-url", branch = "3scale", features = ["serde"] }
http = "^0.2"
lazy_static = "^1"
